--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,26 @@
 		<version.jdk>1.6</version.jdk>
 		<version.maven-compiler-plugin>2.5.1</version.maven-compiler-plugin>
 		<version.maven-resources-plugin>2.6</version.maven-resources-plugin>
+		<!-- Spring version -->
+		<version.spring>4.1.3.RELEASE</version.spring>
 		<!-- Test -->
 		<version.junit>4.11</version.junit>
 		<version.hamcrest>1.3</version.hamcrest>
+		<!-- Logging -->
+		<version.logback>1.1.1</version.logback>
+		<version.logback-extensions>0.1.1</version.logback-extensions>
+		<version.org.slf4j>1.7.6</version.org.slf4j>
+		<!-- Third Party dependencies -->
+		<version.poi>3.8</version.poi>
 	</properties>
 
 	<dependencies>
+		<!-- Spring dependencies -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${version.spring}</version>
+		</dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -33,6 +47,28 @@
 			<artifactId>hamcrest-all</artifactId>
 			<version>${version.hamcrest}</version>
 			<scope>test</scope>
+		</dependency>
+		<!-- Logging -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${version.logback}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.logback-extensions</groupId>
+			<artifactId>logback-ext-spring</artifactId>
+			<version>${version.logback-extensions}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${version.org.slf4j}</version>
+		</dependency>
+		<!-- Third Party dependencies -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>${version.poi}</version>
 		</dependency>
 	</dependencies>
 </project>
